<resources>
    <string name="app_name">tommy-movies</string>

    <string name="movie_release_date">Release date: %s</string>
    <string name="movie_budget">Budget: %s</string>
    <string name="movie_revenue">Revenue: %s</string>

    <string name="category_popular">Popular</string>
    <string name="category_top_rated">Top rated</string>
    <string name="category_upcoming">Upcoming</string>
    <string name="category_latest">Latest</string>
    <string name="category_now_playing">Now playing</string>
</resources>
