<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_home_categories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding"
        app:checkedChip="@id/chip_home_popular"
        app:singleSelection="true"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/category_popular"
            app:checkedIcon="@null"
            app:chipBackgroundColor="@color/selector_category_chip" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_top_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/category_top_rated"
            app:checkedIcon="@null"
            app:chipBackgroundColor="@color/selector_category_chip" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_upcoming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/category_upcoming"
            app:chipBackgroundColor="@color/selector_category_chip"
            app:checkedIcon="@null" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/category_latest"
            app:checkedIcon="@null"
            app:chipBackgroundColor="@color/selector_category_chip" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_home_now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/category_now_playing"
            app:checkedIcon="@null"
            app:chipBackgroundColor="@color/selector_category_chip" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_home_movies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/cg_home_categories"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
